--- a/src/Index.css
+++ b/src/Index.css
@@ -9,7 +9,7 @@
 /* Hero Section  */
 
 body {
-  background-color: #193247;
+  background-color: #00080f;
   background-image: url(../public/Stars\ Backgorund.svg);
 }
 
