Thank You Page Created

--- a/src/Index.css
+++ b/src/Index.css
@@ -8,7 +8,7 @@
 
 /* Hero Section  */
 
-body {
+.background {
   background-color: #00080f;
   background-image: url(../public/Stars\ Backgorund.svg);
 }
@@ -30,4 +30,18 @@ body {
 
 .my-float {
   margin-top: 16px;
+}
+
+.bg-gradient {
+  background: #141e30; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #243b55,
+    #141e30
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #243b55,
+    #141e30
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
